@@ -107,6 +107,12 @@ const SimpleCCMOptions =
      * @default
      */
     secureChannel : false,
+
+    /**
+     * Maximum number of concurrent requests per communication channel.
+     * @default
+     */
+    commConcurrency : 16,
 };
 
 Object.freeze( SimpleCCMOptions );
