@@ -22,7 +22,7 @@
 const $asyncevent = require( 'futoin-asyncevent' );
 
 const common = require( '../common' );
-const { CommError } = common.FutoInError;
+const { InvokerError, CommError } = common.FutoInError;
 const MyWebSocket = WebSocket;
 
 const MessageCoder = require( '../../MessageCoder' );
@@ -90,6 +90,13 @@ class HTTPComms {
         } else {
             req_content_type = msg_coder.contentType();
             rawreq = msg_coder.encode( req );
+
+            // NOTE: not so precise due to multi-byte UTF-8
+            if ( rawreq.length > ctx.max_req_size ) {
+                as.error( InvokerError,
+                    `Request message too long: ${rawreq.length} > ${ctx.max_req_size}` );
+            }
+
             sniffer( ctx.info, rawreq, false );
         }
 
