@@ -24,14 +24,14 @@ const https = require( 'https' );
 const url = require( 'url' );
 const querystring = require( 'querystring' );
 const _clone = require( 'lodash/clone' );
-const WebSocket = require( 'faye-websocket' );
+const WebSocket = require( 'ws' );
 
 const AgentKeepAlive = require( 'agentkeepalive' );
 const AgentKeepAliveSecure = AgentKeepAlive.HttpsAgent;
 
 const common = require( '../common' );
 const { InvokerError, CommError } = common.FutoInError;
-const optname = common.Options;
+const { SAFE_PAYLOAD_LIMIT } = common.Options;
 
 const MessageCoder = require( '../../MessageCoder' );
 
@@ -54,11 +54,14 @@ exports.HTTPComms = class {
             return ccmimpl[ agent_field ];
         }
 
+        const concurrency_limit = ctx.options.commConcurrency;
+
         const agent_opts = {
             keepAlive : true,
             keepAliveMsecs : 5e3,
             keepAliveTimeout : 30e3,
-            maxFreeSockets : 8,
+            maxFreeSockets : concurrency_limit,
+            maxSockets : concurrency_limit,
         };
 
         // Call concfig callback
@@ -112,6 +115,7 @@ exports.HTTPComms = class {
         httpopts.agent = this.getGlobalAgent( as, ctx, is_https );
 
         this._httpopts = httpopts;
+        Object.freeze( httpopts );
         return httpopts;
     }
 
@@ -196,7 +200,8 @@ exports.HTTPComms = class {
             const byte_length = rawreq.length;
 
             if ( byte_length > ctx.max_req_size ) {
-                as.error( InvokerError, "FutoIn message exceeds safety limit" );
+                as.error( InvokerError,
+                    `Request message too long: ${byte_length} > ${ctx.max_req_size}` );
             }
 
             httpopts.headers[ 'content-length' ] = byte_length;
@@ -311,6 +316,9 @@ exports.HTTPComms = class {
     }
 };
 
+const WS_SEND_OPTS = { binary: true, fin: true };
+Object.freeze( WS_SEND_OPTS );
+
 /**
  * Node.js WebSocket communication backend
  * @private
@@ -332,10 +340,14 @@ exports.WSComms = class WSComms {
 
         const opts = ctx.options;
 
-        const ws = new WebSocket.Client(
+        const ws = new WebSocket(
             ctx.endpoint,
             null,
-            { maxLength : optname.SAFE_PAYLOAD_LIMIT }
+            {
+                // not supported by fact, see hack below
+                maxPayload : SAFE_PAYLOAD_LIMIT,
+                perMessageDeflate: false,
+            }
         );
 
         this.ws = ws;
@@ -352,12 +364,18 @@ exports.WSComms = class WSComms {
             const rawrsp = executor.packPayload( coder, rsp );
 
             sniffer( info, rawrsp, false );
-            ws.send( rawrsp );
+            ws.send( rawrsp, WS_SEND_OPTS, ( err ) => {
+                if ( err ) {
+                    cleanup();
+                }
+            } );
         };
 
         const cleanup = ( _arg1, arg2 ) => {
             opts.disconnectSniffer( info );
-            ws.close();
+            ws.removeListener( 'error', cleanup );
+            ws.removeListener( 'close', cleanup );
+            ws.terminate();
             this.ws = null;
             this.rid = 1;
 
@@ -381,11 +399,14 @@ exports.WSComms = class WSComms {
         ws.on( 'open', () => {
             this._waiting_open = false;
             ctx.native_iface.emit( 'connect' );
+            // Dirty hack
+            ws._receiver._maxPayload = Math.max(
+                SAFE_PAYLOAD_LIMIT,
+                ( executor ? executor._maxReqSize : SAFE_PAYLOAD_LIMIT )
+            );
         } );
 
-        ws.on( 'message', ( event ) => {
-            let rsp = event.data;
-
+        ws.on( 'message', ( rsp ) => {
             sniffer( info, rsp, true );
             const coder = MessageCoder.detect( rsp );
 
@@ -418,7 +439,7 @@ exports.WSComms = class WSComms {
 
     close() {
         if ( this.ws ) {
-            this.ws.close();
+            this.ws.terminate();
         }
     }
 
@@ -457,13 +478,7 @@ exports.WSComms = class WSComms {
             as.error( CommError, 'Disconnect while in progress' );
         }
 
-        // dirty hack
-        ws._driver._maxLength = Math.max(
-            ws._driver._maxLength,
-            ctx.max_rsp_size,
-            ctx.max_req_size
-        );
-
+        // ---
         const reqas = this.reqas;
 
         const rid = 'C' + this.rid++;
@@ -478,10 +493,41 @@ exports.WSComms = class WSComms {
             as.setCancel( () => reqas.delete( rid ) );
         }
 
-        //
         const rawmsg = ctx.msg_coder.encode( req );
+        const { max_req_size, max_rsp_size, options } = ctx;
+
+        // dirty hack
+        // ---
+        const ws_receiver = ws._receiver;
+
+        if ( ws_receiver._maxPayload < max_rsp_size ) {
+            ws_receiver._maxPayload = max_rsp_size;
+        }
+
+        //---
+        const msg_len = rawmsg.length;
+
+        if ( msg_len > max_req_size ) {
+            as.error( InvokerError,
+                `Request message too long: ${rawmsg.length} > ${rawmsg.length}` );
+        }
+
+
+        // ---
+        const buffer_max = options.commConcurrency * max_req_size;
+
+        if ( ( ws.bufferedAmount + msg_len ) > buffer_max ) {
+            as.error( CommError,
+                `Send buffer overflow: ${ws.bufferedAmount}` );
+        }
+
+        //---
 
         this.sniffer( ctx.info, rawmsg, false );
-        ws.send( rawmsg );
+        ws.send( rawmsg, WS_SEND_OPTS, ( err ) => {
+            if ( err ) {
+                ws.terminate();
+            }
+        } );
     }
 };
