@@ -1,4 +1,11 @@
 
+=== (next) ===
+CHANGED: to use "ws" instead of "faye-websockets"
+CHANGED: HTTP(S) comms a limited to "commConcurrency" simultaneous connections
+FIXED: to control message size for Node.js WS messages
+FIXED: to support in-channel Executor's max request size
+NEW: "commConcurrency" option
+
 === 2.0.3 (2018-06-13) ===
 FIXED: to allow null for parameter value, if set in spec as default
 FIXED: not to check for unknown type in incomplete mixins for import use
